--- a/css/stylesheetresume.css
+++ b/css/stylesheetresume.css
@@ -142,6 +142,11 @@ body.resumepage {
  padding: 1rem 2rem;
 }
 
+.Skills li, .Education li, .Volunteer li, .Experience li {
+  max-width: 1270px;
+  padding: 1rem 0;
+}
+
 .Intro, .Skills { 
  background-color: #b1f4b6;
 }
@@ -340,6 +345,28 @@ font-family: 'poppins', Arial, Helvetica, sans-serif;
   .ending {
     grid-area: ending;
   }
+
+  
+  .abouttext {
+    display: grid;
+    grid-template-columns: .5fr 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: 
+    'img text';
+    column-gap: 1rem;
+  }
+
+  .img {
+    grid-area: img;
+  }
+
+  .img img {
+    margin-top: 1.5rem;
+  }
+
+  .text {
+    grid-area: text;
+  }
 }
 
 /*large screen stuff*/
@@ -382,7 +409,7 @@ font-family: 'poppins', Arial, Helvetica, sans-serif;
   .casestudy {
     display: grid;
     grid-template-columns: .5fr .5fr .5fr 1fr;
-    grid-template-rows: .1fr .8fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-areas: 
     'task task task title'
     'middle middle ending ending';
@@ -399,8 +426,9 @@ font-family: 'poppins', Arial, Helvetica, sans-serif;
     width: 80%;
   }
 
-  .title {
+  .titlecs {
     grid-area: title;
+    align-self: center;
   }
 
   .middle {
@@ -409,6 +437,31 @@ font-family: 'poppins', Arial, Helvetica, sans-serif;
 
   .ending {
     grid-area: ending;
+  }
+
+  .abouttext {
+    display: grid;
+    grid-template-columns: .5fr 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: 
+    'img text';
+    column-gap: 1rem;
+  }
+
+  .img {
+    grid-area: img;
+  }
+
+  .img img {
+    margin-top: 1.5rem;
+  }
+
+  .text {
+    grid-area: text;
+  }
+
+  .about h1 {
+    font-size: 3rem;
   }
 
   p, li {
